--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bruh Beagle 2</title>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   </head>
 
@@ -14,7 +14,7 @@
 
     <span id="counter">Bruh count: 0</span>
     <!-- Jack5079 watermark -->
-    <a href="//j.mp/g_h" style="color: black; text-decoration: none; position: fixed; bottom: 5%;">a <span
+    <a href="//j.mp/g_h" style="color: black; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a <span
         style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif;">jack5079</span> game</a>
   </body>
 
