--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   </head>
 
   <body>
-
-    <span id="counter">Bruh count: 0</span>
+    <img id="beagle" src="./beg.jpg" style="position: fixed; width: 100vw; height: 100vh; z-index: -100;">
+    <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace;">Bruh count: 0</span>
     <!-- Jack5079 watermark -->
     <a href="//j.mp/g_h" style="color: black; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a <span
-        style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif;">jack5079</span> game</a>
+        style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif; user-select: none;">jack5079</span>
+      game</a>
     <script src="./main.js" defer></script>
   </body>
 
