--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <img id="beagle" src="./beg.jpg" style="position: fixed; width: 100vw; height: 100vh; z-index: -100;">
+    <img id="beagle" src="./beg.jpg"
+      style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
     <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace;">Bruh count: 0</span>
     <!-- Jack5079 watermark -->
     <a href="//j.mp/g_h" style="color: black; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a <span
