--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <img onclick="beagle()" id="beagle" src="./beg.jpg"
+    <img onclick="inc()" id="beagle" src="./beg.jpg"
       style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
     <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
     <!-- Jack5079 watermark -->
