--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="Bruh Beagle 2" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Jack5079" />
+    <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
+    <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
+    <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
+    <meta name="theme-color" content="#77533A">
     <title>Bruh Beagle 2</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dark.css" media="(prefers-color-scheme: dark)">
@@ -18,6 +25,7 @@
     <a href="//j.mp/g_h" style="user-select: none; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a
       <span style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif;">jack5079</span>
       game</a>
+    <!-- Link to the code -->
     <script src="./main.js" defer></script>
   </body>
 
