--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   </head>
 
   <body>
+    <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img onclick="inc()" id="beagle" src="./beg.jpg"
       style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
     <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
