i almost forgot this

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:title" content="Bruh Beagle 2" />
     <meta property="og:type" content="website" />
+    <link rel="manifest" href="./manifest.json">
     <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
