--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
   </head>
 
   <body>
-    <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
-    <img onclick="inc()" id="beagle" src="./beg.jpg"
-      style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
-    <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
-    <!-- Jack5079 watermark -->
-    <a href="//j.mp/g_h" style="user-select: none; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a
-      <span style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif;">jack5079</span>
-      game</a>
+    <main>
+      <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
+      <img onclick="inc()" id="beagle" src="./beg.jpg"
+        style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
+      <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
+    </main>
+    <footer>
+      <!-- Jack5079 watermark -->
+      <a href="//j.mp/g_h" style="user-select: none; text-decoration: none; position: fixed; bottom: 5%; left: 1%;">a
+        <span style="font-weight: bold; letter-spacing: -0.1em; font-family: 'Raleway', sans-serif;">jack5079</span>
+        game</a>
+    </footer>
     <!-- Link to the code -->
     <script src="./main.js" defer></script>
   </body>
