--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
+    <meta name="description" content="Bruh Beagle 2 is here, with faster loading times and more!">
     <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
     <meta name="theme-color" content="#77533A">
     <title>Bruh Beagle 2</title>
