--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
     <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
     <meta name="theme-color" content="#77533A">
     <title>Bruh Beagle 2</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <style>
+      @font-face {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v13/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2) format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
     <link rel="stylesheet" href="./dark.css" media="(prefers-color-scheme: dark)">
   </head>
 
