--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="og:title" content="Bruh Beagle 2" />
     <meta property="og:type" content="website" />
     <link rel="manifest" href="./manifest.json">
+    <link rel="shortcut icon" type="image/png" href="./icon.png" />
     <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
