--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </details>
     <!-- Link to the code -->
-    <script src="./main.js" defer></script>
+    <script src="./main.js" defer type="module"></script>
   </body>
 
 </html>
