--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Bruh Beagle 2" />
     <meta property="og:type" content="website" />
     <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" type="image/png" href="./icon.png" />
+    <link rel="shortcut icon" type="image/png" href="./beg.png" />
     <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
@@ -37,14 +37,13 @@
     <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
     <meta name="theme-color" content="#77533A">
     <title>Bruh Beagle 2</title>
-    <link rel="stylesheet" href="./dark.css" media="(prefers-color-scheme: dark)">
   </head>
 
   <body>
+    <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
+    <img id="beagle" src="./beg.png" alt="A very cute beagle."
+      style="position: fixed; top: 0; left: 0; width: 100%; z-index: -100;">
     <main>
-      <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
-      <img id="beagle" src="./beg.jpg" alt="A very cute beagle."
-        style="transform: rotate(90deg); position: fixed; width: 100vw; height: 100vh; z-index: -100;">
       <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
     </main>
     <!-- Jack5079 button -->
