--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./beg.png" alt="A very cute beagle."
-      style="position: fixed; top: 0; left: 0; width: 100%; z-index: -100;">
+      style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -100;">
     <main>
-      <span id="counter" style="bottom: 5%; right: 1%; font-family: monospace; font-size: 2em;">Bruh count: 0</span>
+      <span id="counter"
+        style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
+        count: 0</span>
     </main>
     <!-- Jack5079 button -->
     <details style="  width: 10vw;
