--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" type="image/png" href="./beg.png" />
     <meta property="og:site_name" content="Jack5079" />
+    <link rel="stylesheet" href="./style.css">
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times and more!" />
     <meta name="description" content="Bruh Beagle 2 is here, with faster loading times and more!">
@@ -43,11 +44,20 @@
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./beg.png" alt="A very cute beagle."
       style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -100;">
-    <main>
-      <span id="counter"
-        style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
-        count: 0</span>
-    </main>
+    <span id="counter"
+      style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
+      count: 0</span>
+    <span id="strength"
+      style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
+      strength: 1</span>
+    <details id="list">
+      <summary>Upgrades</summary>
+      <div id="upgrades">
+        <h2>Bigger Bark</h2>
+        Increases your bruh strength (bruhs on click) by one.<br>
+        <span id="biggerBarkCost">30 bruhs</span> <button id="biggerBark">Buy</button>
+      </div>
+    </details>
     <!-- Jack5079 button -->
     <details style="  width: 10vw;
       position: fixed;
@@ -68,7 +78,7 @@
       </div>
     </details>
     <!-- Link to the code -->
-    <script src="./main.js" defer type="module"></script>
+    <script src="./main.js" defer></script>
   </body>
 
 </html>
