--- a/index.html
+++ b/index.html
@@ -44,38 +44,15 @@
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./beg.png" alt="A very cute beagle."
       style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -100;">
-    <span id="counter"
-      style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
+    <span id="counter" class="counter">Bruh
       count: 0</span>
-    <span id="strength"
-      style=" font-family: monospace; font-size: 2em; background: rgba(255, 255, 255, 0.5); padding: 0.1em;">Bruh
+    <span id="strength" class="counter">Bruh
       strength: 1</span>
     <details id="list">
       <summary>Upgrades</summary>
-      <div id="upgrades">
-        <h2>Bigger Bark</h2>
-        Increases your bruh strength (bruhs on click) by one.<br>
-        <span id="biggerBarkCost">30 bruhs</span> <button id="biggerBark">Buy</button>
-      </div>
-    </details>
-    <!-- Jack5079 button -->
-    <details style="  width: 10vw;
-      position: fixed;
-      top: 1%;
-      right: 1%;">
-      <summary> <img alt="Created by Jack5079" width="50%" src="//jack5079.tk/images/icon.png"
-          style="cursor:pointer;border-radius:50%;"></summary>
-      <div style="  font-size: 1vw;
-      text-align: center;
-      background: darkslategray;
-      color: white;
-      border-radius: 25px;
-    
-      box-shadow: 10px 5px 5px black;">
-        <h3>Bruh Beagle 2</h3>
-        <p>bruh beagle moment</p>
-        <a href="//j.mp/g_h">Created by Jack5079</a>
-      </div>
+      <h2>Bigger Bark</h2>
+      Increases your bruh strength (bruhs on click) by one.<br>
+      <span id="biggerBarkCost">30 bruhs</span> <button id="biggerBark">Buy</button>
     </details>
     <!-- Link to the code -->
     <script src="./main.js" defer></script>
