--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <details id="list">
       <summary>Upgrades</summary>
     </details>
+
+    <!-- Preload images -->
+    <img src="./bark.png" width="0" height="0" style="display: none;">
+    <img src="./bagel.png" width="0" height="0" style="display: none;">
     <!-- Link to the code -->
     <script src="./main.js" defer></script>
   </body>
