better inspect element 😎

--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./beg.png" alt="A very cute beagle."
       style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -100;">
-    <span id="counter" class="counter">Bruh
-      count: 0</span>
-    <span id="strength" class="counter">Bruh
-      strength: 1</span>
+    <span id="counter" class="counter">0</span>
+    <span id="strength" class="counter">1</span>
     <details id="list">
       <summary>Upgrades</summary>
     </details>
