--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Preload images -->
     <img src="./bark.png" width="0" height="0" style="display: none;">
-    <img src="./bagel.png" width="0" height="0" style="display: none;">
+    <img src="./bagel.jpg" width="0" height="0" style="display: none;">
     <!-- Link to the code -->
     <script src="./main.js" defer></script>
   </body>
