beagle fatness is now stackable

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <meta property="og:site_name" content="Jack5079" />
     <link rel="stylesheet" href="./style.css">
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
-    <meta property="og:description" content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!" />
+    <meta property="og:description"
+      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!" />
     <meta name="description" content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!">
     <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
     <meta name="theme-color" content="#77533A">
@@ -42,11 +43,14 @@
 
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
-    <img id="beagle" src="./beg.png" alt="A very cute beagle."
-      style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -100;">
+    <img id="beagle" src="./beg.png" alt="A very cute beagle.">
     <span id="counter" class="counter">0</span>
     <details id="list">
       <summary>Upgrades</summary>
+      <header>
+        <!-- Link to Bruh Beagle Upgrade Maker -->
+        <a href="/bruh-beagle-upgrade-maker/">+</a>
+      </header>
     </details>
 
     <!-- Preload images -->
