--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
     <img id="beagle" src="./beg.png" alt="A very cute beagle.">
     <span id="counter" class="counter">0</span>
     <details id="list">
-      <summary>Upgrades</summary>
-      <header>
+      <summary>Upgrades
         <!-- Link to Bruh Beagle Upgrade Maker -->
-        <a href="/bruh-beagle-upgrade-maker/">+</a>
-      </header>
+        <a href="/bruh-beagle-upgrade-maker/">+</a></summary>
     </details>
 
     <!-- Preload images -->
