add achivements dropdown

--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./beg.png" alt="A very cute beagle.">
     <span id="counter" class="counter">0</span>
-    <details id="list">
-      <summary>Upgrades
-        <!-- Link to Bruh Beagle Upgrade Maker -->
-        <a href="/bruh-beagle-upgrade-maker/">+</a></summary>
-    </details>
+    <div id="expandables">
+      <details id="list">
+        <summary>Upgrades
+          <!-- Link to Bruh Beagle Upgrade Maker -->
+          <a href="/bruh-beagle-upgrade-maker/">+</a></summary>
+      </details>
+
+      <details id="achivements">
+        <summary>Achivements</summary>
+      </details>
+    </div>
 
     <!-- Preload images -->
     <img src="./bark.png" width="0" height="0" style="display: none;">
