Move images to assets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Bruh Beagle 2" />
     <meta property="og:type" content="website" />
     <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" type="image/png" href="./beg.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/beg.png" />
     <meta property="og:site_name" content="Jack5079" />
     <link rel="stylesheet" href="./style.css">
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
@@ -43,7 +43,7 @@
 
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
-    <img id="beagle" src="./beg.png" alt="A very cute beagle.">
+    <img id="beagle" src="./assets/beg.png" alt="A very cute beagle.">
     <span id="counter" class="counter">0</span>
     <div id="expandables">
       <details id="list">
@@ -58,8 +58,8 @@
     </div>
 
     <!-- Preload images -->
-    <img src="./bark.png" width="0" height="0" style="display: none;">
-    <img src="./bagel.jpg" width="0" height="0" style="display: none;">
+    <img src="./assets/bark.png" width="0" height="0" style="display: none;">
+    <img src="./assets/bagel.jpg" width="0" height="0" style="display: none;">
     <!-- Link to the code -->
     <script src="./main.mjs" type="module" defer></script>
   </body>
