--- a/index.html
+++ b/index.html
@@ -25,23 +25,27 @@
     </script>
     
 
-    <!-- Preload images -->
+    <!-- Preload assets -->
     <link href="./assets/bark.png" rel="preload" as="image">
     <link href="./assets/bagel.jpg" rel="preload" as="image" >
+    <link rel="preload" href="./assets/sound.mp3" as="audio">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:title" content="Bruh Beagle 2" />
-    <meta property="og:type" content="website" />
+
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" type="image/png" href="./assets/beg.png" />
-    <meta property="og:site_name" content="Jack5079" />
     <link rel="stylesheet" href="./style.css">
+    <!-- Social media & SEO -->
+        <meta property="og:title" content="Bruh Beagle 2" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description"
       content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!" />
     <meta name="description" content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!">
     <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
+    <!-- Color & Title -->
     <meta name="theme-color" content="#77533A">
     <title>Bruh Beagle 2</title>
   </head>
