--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./assets/beg.png" alt="Aww!!! A cute beagle!"></img>
-    <span id="counter" class="counter">0</span>
+    <span id="counter" title="Bruh count" class="counter">0</span>
     <div id="expandables">
       <details id="list">
         <summary>Upgrades
