Switch to .webp

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     
 
     <!-- Preload assets -->
-    <link href="./assets/bark.png" rel="preload" as="image">
-    <link href="./assets/bagel.jpg" rel="preload" as="image" >
+    <link href="./assets/bark.webp" rel="preload" as="image">
+    <link href="./assets/bagel.webp" rel="preload" as="image" >
     <link rel="preload" href="./assets/sound.mp3" as="audio">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
 
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
-    <img id="beagle" src="./assets/beg.png" alt="Aww!!! A cute beagle!" />
+    <img id="beagle" src="./assets/beg.webp" alt="Aww!!! A cute beagle!" />
     <span id="counter" title="Bruh count" class="counter">0</span>
     <div id="expandables">
       <details id="list">
