--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" type="image/png" href="./assets/beg.png" />
+    <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
     <link rel="stylesheet" href="./style.css">
     <!-- Social media & SEO -->
         <meta property="og:title" content="Bruh Beagle 2" />
