Game now adapts to imports

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./assets/beg.webp" alt="Aww!!! A cute beagle!" />
     <div id="expandables">
-      <details id="achivements">
-        <summary>Achivements</summary>
-      </details>
+      <!-- The code fills this -->
     </div>
   </body>
 
