add javascript message

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div id="expandables">
       <!-- The code fills this -->
     </div>
+    <noscript>give me foo- i mean javascript</noscript>
   </body>
 
 </html>
