--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         }
       }
     </script>
-    
+
 
     <!-- Preload assets -->
     <link href="./assets/bark.webp" rel="preload" as="image">
-    <link href="./assets/bagel.webp" rel="preload" as="image" >
+    <link href="./assets/bagel.webp" rel="preload" as="image">
     <link rel="preload" href="./assets/sound.mp3" as="audio">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,9 +39,9 @@
     <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
     <link rel="stylesheet" href="./style.css">
     <!-- Social media & SEO -->
-        <meta property="og:title" content="Bruh Beagle 2" />
-        <meta property="og:type" content="website" />
-        <meta property="og:site_name" content="Jack5079" />
+    <meta property="og:title" content="Bruh Beagle 2" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Jack5079" />
     <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
     <meta property="og:description"
       content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!" />
@@ -55,9 +55,9 @@
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./assets/beg.webp" alt="Aww!!! A cute beagle!" />
-    <div id="expandables">
+    <section id="expandables">
       <!-- The code fills this -->
-    </div>
+    </section>
     <noscript>give me foo- i mean javascript</noscript>
   </body>
 
