--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
   <body>
     <!-- The actual beagle picture. Every time the user clicks, it calls the function inc. It is fixed in the center, behind everything else. It resizes to fit the screen.  -->
     <img id="beagle" src="./assets/beg.webp" alt="Aww!!! A cute beagle!" />
-    <section id="expandables">
+    <nav id="expandables">
       <!-- The code fills this -->
-    </section>
+    </nav>
     <noscript>give me foo- i mean javascript</noscript>
   </body>
 
