--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <!-- Link to the code -->
     <script src="./main.mjs" type="module" defer></script>
@@ -12,7 +11,9 @@
       // Check compatibility for the browser we're running this in
       if ('serviceWorker' in navigator) {
         if (navigator.serviceWorker.controller) {
-          console.log('[PWA Builder] active service worker found, no need to register')
+          console.log(
+            '[PWA Builder] active service worker found, no need to register'
+          )
         } else {
           // Register the service worker
           navigator.serviceWorker
@@ -20,35 +21,55 @@
               scope: './'
             })
             .then(function (reg) {
-              console.log('[PWA Builder] Service worker has been registered for scope: ' + reg.scope)
+              console.log(
+                '[PWA Builder] Service worker has been registered for scope: ' +
+                  reg.scope
+              )
             })
         }
       }
     </script>
 
-
     <!-- Preload assets -->
-    <link href="./assets/bark.webp" rel="preload" as="image">
-    <link href="./assets/bagel.webp" rel="preload" as="image">
-    <link rel="preload" href="./assets/sound.mp3" as="audio">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="./assets/bark.webp" rel="preload" as="image" />
+    <link href="./assets/bagel.webp" rel="preload" as="image" />
+    <link rel="preload" href="./assets/sound.mp3" as="audio" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./manifest.json" />
     <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <!-- Social media & SEO -->
     <meta property="og:title" content="Bruh Beagle 2" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Jack5079" />
-    <meta property="og:url" content="https://www.jack5079.github.io/bruh-beagle-2/" />
-    <meta property="og:description"
-      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!" />
-    <meta name="description" content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!">
-    <meta property="og:image" content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg" />
+    <meta
+      property="og:url"
+      content="https://www.jack5079.github.io/bruh-beagle-2/"
+    />
+    <meta
+      property="og:description"
+      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!"
+    />
+    <meta
+      name="description"
+      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!"
+    />
+    <meta
+      property="og:image"
+      content="https://i.ytimg.com/vi/2ZIpFytCSVc/maxresdefault.jpg"
+    />
     <!-- Color & Title -->
-    <meta name="theme-color" content="#77533A">
+    <meta name="theme-color" content="#77533A" />
+    <meta name="twitter:title" content="Bruh Beagle 2" />
+    <meta name="twitter:image" content="./assets/beg.webp" />
+    <meta name="twitter:site" content="@Jack5o79" />
+    <meta name="twitter:card" content="player" />
+    <meta name="twitter:player" content="./index.html" />
+    <meta name="twitter:player:height" content="300" />
+    <meta name="twitter:player:width" content="740" />
     <title>Bruh Beagle 2</title>
   </head>
 
@@ -60,5 +81,4 @@
     </nav>
     <noscript>give me foo- i mean javascript</noscript>
   </body>
-
 </html>
