--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
     <meta name="twitter:image" content="./assets/beg.webp" />
     <meta name="twitter:site" content="@Jack5o79" />
     <meta name="twitter:card" content="player" />
-    <meta name="twitter:player" content="./index.html" />
+    <meta
+      name="twitter:player"
+      content="https://jack5079.tk/bruh-beagle-2/index.html"
+    />
     <meta name="twitter:player:height" content="300" />
     <meta name="twitter:player:width" content="740" />
     <title>Bruh Beagle 2</title>
