--- a/404.html
+++ b/404.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>404!</title>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/Jack5079/jack.css@master/jack.min.css"
+    />
+
+    <style>
+      a {
+        border-radius: 1em;
+        padding: 0.3em;
+        text-decoration: none;
+        background: white;
+      }
+    </style>
   </head>
 
   <body style="text-align: center">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>Sorry.</p>
-    <button><a href="./index.html">Home</a></button>
+    <a href="./index.html">🏠</a>
   </body>
-
 </html>
