Rename to Bark Beagle

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     <meta property="og:site_name" content="Jack5079" />
     <meta
       property="og:url"
-      content="https://www.jack5079.github.io/bruh-beagle-2/"
+      content="https://www.jack5079.github.io/bark-beagle/"
     />
     <meta
       property="og:description"
-      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!"
+      content="Bark Beagle - the weirdest idle clicker ever made"
     />
     <meta
-      name="description"
-      content="Bruh Beagle 2 is here, with faster loading times, cuter dogs, and upgrades!"
+      property="og:description"
+      content="Bark Beagle - the weirdest idle clicker ever made"
     />
     <meta
       property="og:image"
@@ -63,17 +63,7 @@
     />
     <!-- Color & Title -->
     <meta name="theme-color" content="#77533A" />
-    <meta name="twitter:title" content="Bruh Beagle 2" />
-    <meta name="twitter:image" content="./assets/beg.webp" />
-    <meta name="twitter:site" content="@Jack5o79" />
-    <meta name="twitter:card" content="player" />
-    <meta
-      name="twitter:player"
-      content="https://jack5079.tk/bruh-beagle-2/index.html"
-    />
-    <meta name="twitter:player:height" content="300" />
-    <meta name="twitter:player:width" content="740" />
-    <title>Bruh Beagle 2</title>
+    <title>Bark Beagle</title>
   </head>
 
   <body>
