fix this one meta tag

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
     <link rel="stylesheet" href="./style.css" />
     <!-- Social media & SEO -->
-    <meta property="og:title" content="Bruh Beagle 2" />
+    <meta property="og:title" content="Bark Beagle" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Jack5079" />
     <meta
