--- a/404.html
+++ b/404.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404!</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/Jack5079/jack.css@master/jack.min.css"
-    />
-
     <style>
       a {
         border-radius: 1em;
         padding: 0.3em;
         text-decoration: none;
-        background: white;
+        background: rgba(0, 0, 0, 0.5);
+      }
+
+      body {
+        color: white;
+        background-color: black;
+        background: url(./assets/beg.webp);
       }
     </style>
   </head>
