--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <!-- Link to the code -->
     <script src="./main.mjs" type="module" defer></script>
     <script>
@@ -34,12 +35,11 @@
     <link href="./assets/bark.webp" rel="preload" as="image" />
     <link href="./assets/bagel.webp" rel="preload" as="image" />
     <link rel="preload" href="./assets/sound.mp3" as="audio" />
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
+    <link rel="apple-touch-icon" href="./assets/beg.webp" />
     <link rel="stylesheet" href="./style.css" />
     <!-- Social media & SEO -->
     <meta property="og:title" content="Bark Beagle" />
