--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="shortcut icon" type="image/webp" href="./assets/beg.webp" />
-    <link rel="apple-touch-icon" href="./assets/beg.webp" />
+    <link rel="apple-touch-icon" href="./assets/fuckapple.png" />
     <link rel="stylesheet" href="./style.css" />
     <!-- Social media & SEO -->
     <meta property="og:title" content="Bark Beagle" />
