--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <nav id="expandables">
       <!-- The code fills this -->
     </nav>
-    <noscript>give me foo- i mean javascript</noscript>
+    <noscript>
+      bark beagle requires ecmascript 6 or greater
+    </noscript>
   </body>
 </html>
